--- a/styles/partials/style.css
+++ b/styles/partials/style.css
@@ -2,7 +2,7 @@
 /*layout*/
 body {
   width: 100%;
-  max-width: 1920px;
+  max-width: 3840px;
   height: auto;
   margin: 0;
 }
@@ -244,241 +244,457 @@ footer {
 
 /*responsive layout*/
 /*index*/
-/*header index*/
-.header1 {
-  text-align: center;
-  width: 100%;
-  height: 130px;
-  background-color: #00796b;
-  color: #ffd54f;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-/*header index*/
-/*barre de recherche index*/
-.recherche .iconloupe {
-  background: url(http://www.larevuedekenza.fr/wp-content/themes/quarter/images/sidebar/loupe.png) no-repeat 0 0;
-}
-
-.recherche input {
-  outline: 0;
-  border: 0;
-  margin: 0;
-  height: 24px;
-  float: left;
-  display: block;
-  padding-left: 30px;
-}
-
-.recherche {
-  background-color: white;
-  height: 30px;
-  border: solid 1px grey;
-}
-
-.iconloupe {
-  float: left;
-}
-
-/*barre de recherche index*/
-/*box + zoom sur image*/
-#box1 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  margin: auto;
-}
-
-.menu {
-  margin: 30px auto 30px auto;
-  border: solid 2px #e0e0e0;
-  width: 40%;
-  overflow: hidden;
-}
-
-.menu img:hover {
-  width: 100%;
-  /* L'image est grossie de 15% */
-  -webkit-transform: scale(1.15);
-  /* Safari et Chrome */
-  /* Firefox */
-  /* Internet Explorer 9 */
-  /* Opera */
-  transform: scale(1.15);
-  -webkit-transition: all 0.9s;
-  transition: all 0.9s;
-  opacity: 0.7;
-}
-
-.menu img {
-  width: 100%;
-  height: 100%;
-}
-
-.menu img:hover {
-  width: 100%;
-}
-
-/*box + zoom sur image*/
-/*prochainement + animation points*/
-.bientot {
-  font-size: 2.1em;
-  text-align: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  color: #ffd54f;
-  border: 2px dotted #00796b;
-  background-color: #00796b;
-  border-radius: 20px;
-  width: 33%;
-  margin: 30px auto 50px auto;
-  height: auto;
-}
-
-@-webkit-keyframes dots {
-  0% {
-    margin-top: 0;
+@media screen and (min-width: 1920px) and (max-width: 3840px) {
+  html {
+    height: auto;
+    width: 100%;
   }
-  50% {
+  .header1 {
+    text-align: center;
+    width: 100%;
+    height: 130px;
+    background-color: #00796b;
+    color: #ffd54f;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  /*header index*/
+  /*barre de recherche index*/
+  .recherche .iconloupe {
+    background: url(http://www.larevuedekenza.fr/wp-content/themes/quarter/images/sidebar/loupe.png) no-repeat 0 0;
+  }
+  .recherche input {
+    outline: 0;
+    border: 0;
+    margin: 0;
+    height: 24px;
+    float: left;
+    display: block;
+    padding-left: 30px;
+  }
+  .recherche {
+    background-color: white;
+    height: 30px;
+    border: solid 1px grey;
+  }
+  .iconloupe {
+    float: left;
+  }
+  /*barre de recherche index*/
+  /*box + zoom sur image*/
+  #box1 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    min-height: 1800px;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    margin: auto;
+  }
+  .menu {
+    margin: 30px;
+    border: solid 2px #e0e0e0;
+    width: auto;
+    overflow: hidden;
+  }
+  .menu img:hover {
+    width: 100%;
+    /* L'image est grossie de 15% */
+    -webkit-transform: scale(1.15);
+    /* Safari et Chrome */
+    /* Firefox */
+    /* Internet Explorer 9 */
+    /* Opera */
+    transform: scale(1.15);
+    -webkit-transition: all 0.9s;
+    transition: all 0.9s;
+    opacity: 0.7;
+  }
+  .menu img {
+    width: 100%;
+    height: auto;
+  }
+  .menu img:hover {
+    width: 100%;
+  }
+  /*box + zoom sur image*/
+  /*prochainement + animation points*/
+  .bientot {
+    font-size: 2.1em;
+    text-align: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    color: #ffd54f;
+    border: 2px dotted #00796b;
+    background-color: #00796b;
+    border-radius: 20px;
+    width: 33%;
+    margin: 30px auto 50px auto;
+    height: auto;
+  }
+  @-webkit-keyframes dots {
+    0% {
+      margin-top: 0;
+    }
+    50% {
+      margin-top: -5px;
+    }
+    100% {
+      margin-top: 0;
+    }
+  }
+  @keyframes dots {
+    0% {
+      margin-top: 0;
+    }
+    50% {
+      margin-top: -5px;
+    }
+    100% {
+      margin-top: 0;
+    }
+  }
+  .bientot span:first-child {
+    -webkit-animation: dots 1.5s infinite;
+            animation: dots 1.5s infinite;
+  }
+  .bientot span:nth-child(2) {
+    -webkit-animation: dots 1.5s infinite;
+            animation: dots 1.5s infinite;
+    -webkit-animation-delay: 0.5s;
+            animation-delay: 0.5s;
+  }
+  .bientot span:last-child {
+    -webkit-animation: dots 1.5s infinite;
+            animation: dots 1.5s infinite;
+    -webkit-animation-delay: 1s;
+            animation-delay: 1s;
+  }
+  span {
     margin-top: -5px;
   }
-  100% {
-    margin-top: 0;
+  /*prochainement + animation points*/
+  /*mentions + mail animés*/
+  @-webkit-keyframes thing {
+    0% {
+      margin: 0;
+    }
+    15% {
+      margin-top: -2px;
+    }
+    33% {
+      margin-left: -5px;
+    }
+    45% {
+      margin-top: 2px;
+    }
+    66% {
+      margin-left: 5px;
+    }
+    100% {
+      margin: 0;
+    }
+    0% {
+      margin: 0;
+    }
+    15% {
+      margin-top: -2px;
+    }
+    33% {
+      margin-right: -5px;
+    }
+    45% {
+      margin-top: 2px;
+    }
+    66% {
+      margin-right: 5px;
+    }
+    100% {
+      margin: 0;
+    }
+  }
+  @keyframes thing {
+    0% {
+      margin: 0;
+    }
+    15% {
+      margin-top: -2px;
+    }
+    33% {
+      margin-left: -5px;
+    }
+    45% {
+      margin-top: 2px;
+    }
+    66% {
+      margin-left: 5px;
+    }
+    100% {
+      margin: 0;
+    }
+    0% {
+      margin: 0;
+    }
+    15% {
+      margin-top: -2px;
+    }
+    33% {
+      margin-right: -5px;
+    }
+    45% {
+      margin-top: 2px;
+    }
+    66% {
+      margin-right: 5px;
+    }
+    100% {
+      margin: 0;
+    }
   }
 }
 
-@keyframes dots {
-  0% {
-    margin-top: 0;
+@media screen and (max-width: 1919px) {
+  /*header index*/
+  html {
+    height: auto;
+    width: 100%;
   }
-  50% {
+  .header1 {
+    text-align: center;
+    width: 100%;
+    height: 130px;
+    background-color: #00796b;
+    color: #ffd54f;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  /*header index*/
+  /*barre de recherche index*/
+  .recherche .iconloupe {
+    background: url(http://www.larevuedekenza.fr/wp-content/themes/quarter/images/sidebar/loupe.png) no-repeat 0 0;
+  }
+  .recherche input {
+    outline: 0;
+    border: 0;
+    margin: 0;
+    height: 24px;
+    float: left;
+    display: block;
+    padding-left: 30px;
+  }
+  .recherche {
+    background-color: white;
+    height: 30px;
+    border: solid 1px grey;
+  }
+  .iconloupe {
+    float: left;
+  }
+  /*barre de recherche index*/
+  /*box + zoom sur image*/
+  #box1 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    margin: auto;
+  }
+  .menu {
+    margin: 30px auto 30px auto;
+    border: solid 2px #e0e0e0;
+    width: 40%;
+    overflow: hidden;
+  }
+  .menu img:hover {
+    width: 100%;
+    /* L'image est grossie de 15% */
+    -webkit-transform: scale(1.15);
+    /* Safari et Chrome */
+    /* Firefox */
+    /* Internet Explorer 9 */
+    /* Opera */
+    transform: scale(1.15);
+    -webkit-transition: all 0.9s;
+    transition: all 0.9s;
+    opacity: 0.7;
+  }
+  .menu img {
+    width: 100%;
+    height: 100%;
+  }
+  .menu img:hover {
+    width: 100%;
+  }
+  /*box + zoom sur image*/
+  /*prochainement + animation points*/
+  .bientot {
+    font-size: 2.1em;
+    text-align: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    color: #ffd54f;
+    border: 2px dotted #00796b;
+    background-color: #00796b;
+    border-radius: 20px;
+    width: 33%;
+    margin: 30px auto 50px auto;
+    height: auto;
+  }
+  @-webkit-keyframes dots {
+    0% {
+      margin-top: 0;
+    }
+    50% {
+      margin-top: -5px;
+    }
+    100% {
+      margin-top: 0;
+    }
+  }
+  @keyframes dots {
+    0% {
+      margin-top: 0;
+    }
+    50% {
+      margin-top: -5px;
+    }
+    100% {
+      margin-top: 0;
+    }
+  }
+  .bientot span:first-child {
+    -webkit-animation: dots 1.5s infinite;
+            animation: dots 1.5s infinite;
+  }
+  .bientot span:nth-child(2) {
+    -webkit-animation: dots 1.5s infinite;
+            animation: dots 1.5s infinite;
+    -webkit-animation-delay: 0.5s;
+            animation-delay: 0.5s;
+  }
+  .bientot span:last-child {
+    -webkit-animation: dots 1.5s infinite;
+            animation: dots 1.5s infinite;
+    -webkit-animation-delay: 1s;
+            animation-delay: 1s;
+  }
+  span {
     margin-top: -5px;
   }
-  100% {
-    margin-top: 0;
+  /*prochainement + animation points*/
+  /*mentions + mail animés*/
+  @-webkit-keyframes thing {
+    0% {
+      margin: 0;
+    }
+    15% {
+      margin-top: -2px;
+    }
+    33% {
+      margin-left: -5px;
+    }
+    45% {
+      margin-top: 2px;
+    }
+    66% {
+      margin-left: 5px;
+    }
+    100% {
+      margin: 0;
+    }
+    0% {
+      margin: 0;
+    }
+    15% {
+      margin-top: -2px;
+    }
+    33% {
+      margin-right: -5px;
+    }
+    45% {
+      margin-top: 2px;
+    }
+    66% {
+      margin-right: 5px;
+    }
+    100% {
+      margin: 0;
+    }
   }
-}
-
-.bientot span:first-child {
-  -webkit-animation: dots 1.5s infinite;
-          animation: dots 1.5s infinite;
-}
-
-.bientot span:nth-child(2) {
-  -webkit-animation: dots 1.5s infinite;
-          animation: dots 1.5s infinite;
-  -webkit-animation-delay: 0.5s;
-          animation-delay: 0.5s;
-}
-
-.bientot span:last-child {
-  -webkit-animation: dots 1.5s infinite;
-          animation: dots 1.5s infinite;
-  -webkit-animation-delay: 1s;
-          animation-delay: 1s;
-}
-
-span {
-  margin-top: -5px;
-}
-
-/*prochainement + animation points*/
-/*mentions + mail animés*/
-@-webkit-keyframes thing {
-  0% {
-    margin: 0;
-  }
-  15% {
-    margin-top: -2px;
-  }
-  33% {
-    margin-left: -5px;
-  }
-  45% {
-    margin-top: 2px;
-  }
-  66% {
-    margin-left: 5px;
-  }
-  100% {
-    margin: 0;
-  }
-  0% {
-    margin: 0;
-  }
-  15% {
-    margin-top: -2px;
-  }
-  33% {
-    margin-right: -5px;
-  }
-  45% {
-    margin-top: 2px;
-  }
-  66% {
-    margin-right: 5px;
-  }
-  100% {
-    margin: 0;
-  }
-}
-@keyframes thing {
-  0% {
-    margin: 0;
-  }
-  15% {
-    margin-top: -2px;
-  }
-  33% {
-    margin-left: -5px;
-  }
-  45% {
-    margin-top: 2px;
-  }
-  66% {
-    margin-left: 5px;
-  }
-  100% {
-    margin: 0;
-  }
-  0% {
-    margin: 0;
-  }
-  15% {
-    margin-top: -2px;
-  }
-  33% {
-    margin-right: -5px;
-  }
-  45% {
-    margin-top: 2px;
-  }
-  66% {
-    margin-right: 5px;
-  }
-  100% {
-    margin: 0;
+  @keyframes thing {
+    0% {
+      margin: 0;
+    }
+    15% {
+      margin-top: -2px;
+    }
+    33% {
+      margin-left: -5px;
+    }
+    45% {
+      margin-top: 2px;
+    }
+    66% {
+      margin-left: 5px;
+    }
+    100% {
+      margin: 0;
+    }
+    0% {
+      margin: 0;
+    }
+    15% {
+      margin-top: -2px;
+    }
+    33% {
+      margin-right: -5px;
+    }
+    45% {
+      margin-top: 2px;
+    }
+    66% {
+      margin-right: 5px;
+    }
+    100% {
+      margin: 0;
+    }
   }
 }
 
@@ -658,7 +874,7 @@ li {
     width: auto;
   }
   #container-m1 {
-    width: 90%;
+    width: 100%;
     margin: auto;
     height: auto;
   }
@@ -697,7 +913,7 @@ li {
     height: 30px;
   }
   .carte-m1 {
-    width: 100%;
+    width: 90%;
     margin-bottom: 20px;
   }
   .fin {
